--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "cli": {
     "defaultCollection": "@nrwl/angular"
   },
-  "defaultProject": "zivver",
+  "defaultProject": "app",
   "schematics": {
     "@nrwl/angular": {
       "application": {
@@ -32,31 +32,31 @@
     }
   },
   "projects": {
-    "zivver": {
+    "app": {
       "projectType": "application",
-      "root": "apps/zivver",
-      "sourceRoot": "apps/zivver/src",
-      "prefix": "zivver",
+      "root": "apps/app",
+      "sourceRoot": "apps/app/src",
+      "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/apps/zivver",
-            "index": "apps/zivver/src/index.html",
-            "main": "apps/zivver/src/main.ts",
-            "polyfills": "apps/zivver/src/polyfills.ts",
-            "tsConfig": "apps/zivver/tsconfig.app.json",
+            "outputPath": "dist/apps/app",
+            "index": "apps/app/src/index.html",
+            "main": "apps/app/src/main.ts",
+            "polyfills": "apps/app/src/polyfills.ts",
+            "tsConfig": "apps/app/tsconfig.app.json",
             "aot": true,
-            "assets": ["apps/zivver/src/favicon.ico", "apps/zivver/src/assets"],
-            "styles": ["apps/zivver/src/styles.scss"],
+            "assets": ["apps/app/src/favicon.ico", "apps/app/src/assets"],
+            "styles": ["apps/app/src/styles.scss", "sass/style.scss"],
             "scripts": []
           },
           "configurations": {
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "apps/zivver/src/environments/environment.ts",
-                  "with": "apps/zivver/src/environments/environment.prod.ts"
+                  "replace": "apps/app/src/environments/environment.ts",
+                  "with": "apps/app/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -84,61 +84,157 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "zivver:build"
+            "browserTarget": "app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "zivver:build:production"
+              "browserTarget": "app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "zivver:build"
+            "browserTarget": "app:build"
           }
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": [
-              "apps/zivver/src/**/*.ts",
-              "apps/zivver/src/**/*.html"
+              "apps/app/src/**/*.ts",
+              "apps/app/src/**/*.html"
             ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/zivver"],
+          "outputs": ["coverage/apps/app"],
           "options": {
-            "jestConfig": "apps/zivver/jest.config.js",
+            "jestConfig": "apps/app/jest.config.js",
             "passWithNoTests": true
           }
         }
       }
     },
-    "zivver-e2e": {
-      "root": "apps/zivver-e2e",
-      "sourceRoot": "apps/zivver-e2e/src",
+    "app-e2e": {
+      "root": "apps/app-e2e",
+      "sourceRoot": "apps/app-e2e/src",
       "projectType": "application",
       "architect": {
         "e2e": {
           "builder": "@nrwl/cypress:cypress",
           "options": {
-            "cypressConfig": "apps/zivver-e2e/cypress.json",
-            "tsConfig": "apps/zivver-e2e/tsconfig.e2e.json",
-            "devServerTarget": "zivver:serve"
+            "cypressConfig": "apps/app-e2e/cypress.json",
+            "tsConfig": "apps/app-e2e/tsconfig.e2e.json",
+            "devServerTarget": "app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "zivver:serve:production"
+              "devServerTarget": "app:serve:production"
             }
           }
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
-            "lintFilePatterns": ["apps/zivver-e2e/**/*.{js,ts}"]
+            "lintFilePatterns": ["apps/app-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
+    },
+    "-libs-common-ui": {
+      "root": "libs//libs/common-ui",
+      "sourceRoot": "libs/libs/common-ui/src",
+      "projectType": "library",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs//libs/common-ui/**/*.ts"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/libs/common-ui"],
+          "options": {
+            "jestConfig": "libs/libs/common-ui/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "common": {
+      "projectType": "library",
+      "root": "libs/common",
+      "sourceRoot": "libs/common/src",
+      "prefix": "app",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/common/src/**/*.ts",
+              "libs/common/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/common"],
+          "options": {
+            "jestConfig": "libs/common/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "common-ui": {
+      "projectType": "library",
+      "root": "libs/common-ui",
+      "sourceRoot": "libs/common-ui/src",
+      "prefix": "app",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/common-ui/src/**/*.ts",
+              "libs/common-ui/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/common-ui"],
+          "options": {
+            "jestConfig": "libs/common-ui/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "posts": {
+      "projectType": "library",
+      "root": "libs/posts",
+      "sourceRoot": "libs/posts/src",
+      "prefix": "app",
+      "architect": {
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/posts/src/**/*.ts",
+              "libs/posts/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/posts"],
+          "options": {
+            "jestConfig": "libs/posts/jest.config.js",
+            "passWithNoTests": true
           }
         }
       }
