--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zivver",
+  "name": "app",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -37,7 +37,9 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "@nrwl/angular": "11.6.1",
+    "bootstrap": "^4.6.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
